; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_itml.c_skip_element.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_itml.c_skip_element.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XML_READER_ENDELEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*, i8*, i32*)* @skip_element to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skip_element(i32* %0, i32* %1, i32* %2, i32* %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i8* %4, i8** %12, align 8
  store i32* %5, i32** %13, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @VLC_UNUSED(i32* %16)
  %18 = load i32*, i32** %9, align 8
  %19 = call i32 @VLC_UNUSED(i32* %18)
  %20 = load i32*, i32** %10, align 8
  %21 = call i32 @VLC_UNUSED(i32* %20)
  %22 = load i32*, i32** %13, align 8
  %23 = call i32 @VLC_UNUSED(i32* %22)
  br label %24

24:                                               ; preds = %38, %6
  %25 = load i32*, i32** %11, align 8
  %26 = call i32 @xml_ReaderNextNode(i32* %25, i8** %14)
  store i32 %26, i32* %15, align 4
  %27 = icmp sgt i32 %26, 0
  br i1 %27, label %28, label %39

28:                                               ; preds = %24
  %29 = load i32, i32* %15, align 4
  %30 = load i32, i32* @XML_READER_ENDELEM, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %38

32:                                               ; preds = %28
  %33 = load i8*, i8** %12, align 8
  %34 = load i8*, i8** %14, align 8
  %35 = call i32 @strcmp(i8* %33, i8* %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %38, label %37

37:                                               ; preds = %32
  store i32 1, i32* %7, align 4
  br label %40

38:                                               ; preds = %32, %28
  br label %24

39:                                               ; preds = %24
  store i32 0, i32* %7, align 4
  br label %40

40:                                               ; preds = %39, %37
  %41 = load i32, i32* %7, align 4
  ret i32 %41
}

declare dso_local i32 @VLC_UNUSED(i32*) #1

declare dso_local i32 @xml_ReaderNextNode(i32*, i8**) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
